After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776553 - flatpak-plugin: when parsing the manifest check for "id" and "app-id"
flatpak-plugin: when parsing the manifest check for "id" and "app-id"
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: plugins
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-28 20:45 UTC by Simon Schampijer
Modified: 2016-12-30 00:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
When parsing the manifest check for "id" and "app-id" (1.39 KB, patch)
2016-12-28 20:45 UTC, Simon Schampijer
none Details | Review

Description Simon Schampijer 2016-12-28 20:45:54 UTC
Created attachment 342553 [details] [review]
When parsing the manifest check for "id" and "app-id"

The specification allows for "id" and "app-id", and the manifest that comes with the installation has the "id" field set, so we need to support this as well.

Steps to reproduce:
- use the -m option and pass a manifest to build an application to build
Comment 1 Matthew Leeds 2016-12-30 00:56:20 UTC
Pushed as commit 61cb21ebb9274546bb9fa211b88db9decf342224 with a follow-up commit to set the error before returning.