flatpak: When parsing the manifest check for "id" and "app-id"

The specification allows for "id" and "app-id", and
the manifest that comes with the installation has
the "id" field set, so we need to support this as
well.

https://bugzilla.gnome.org/show_bug.cgi?id=776553